--- a/Backend/package.json
+++ b/Backend/package.json
@@ -13,6 +13,7 @@
     "express-session": "^1.18.1",
     "http-status-codes": "^2.3.0",
     "jsonwebtoken": "^9.0.2",
+    "multer": "^1.4.5-lts.2",
     "mysql2": "^3.13.0",
     "sequelize": "^6.37.7",
     "socket.io": "^4.8.1",
