--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -26,7 +26,8 @@
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.4.0",
     "socket.io-client": "^4.8.1",
-    "uuid": "^11.1.0"
+    "uuid": "^11.1.0",
+    "yet-another-react-lightbox": "^3.23.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
