--- a/Backend/package.json
+++ b/Backend/package.json
@@ -15,7 +15,9 @@
     "jsonwebtoken": "^9.0.2",
     "multer": "^1.4.5-lts.2",
     "mysql2": "^3.13.0",
+    "path": "^0.12.7",
     "sequelize": "^6.37.7",
+    "sharp": "^0.34.1",
     "socket.io": "^4.8.1",
     "uuid": "^11.1.0",
     "web-push": "^3.6.7"
